crates/diffguard-app/tests/snapshots/snapshot_tests__snapshot_annotations_empty.snap
---
source: crates/diffguard-app/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---

