crates/diffguard-app/tests/snapshots/snapshot_tests__snapshot_annotations_info_only.snap
---
source: crates/diffguard-app/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---
::notice file=src/lib.rs,line=5::style.todo_comment TODO comment found
