crates/diffguard-app/tests/snapshots/snapshot_tests__snapshot_json_receipt_no_column.snap
---
source: crates/diffguard-app/tests/snapshot_tests.rs
expression: json
---
{
  "schema": "diffguard.check.v1",
  "tool": {
    "name": "diffguard",
    "version": "0.1.0"
  },
  "diff": {
    "base": "origin/main",
    "head": "HEAD",
    "context_lines": 0,
    "scope": "added",
    "files_scanned": 1,
    "lines_scanned": 10
  },
  "findings": [
    {
      "rule_id": "python.no_print",
      "severity": "warn",
      "message": "Remove print statement",
      "path": "scripts/deploy.py",
      "line": 12,
      "match_text": "print(",
      "snippet": "print(\"Deploying...\")"
    }
  ],
  "verdict": {
    "status": "warn",
    "counts": {
      "info": 0,
      "warn": 1,
      "error": 0
    },
    "reasons": [
      "1 warning(s)"
    ]
  }
}
