crates/diffguard-app/tests/snapshots/snapshot_tests__snapshot_json_receipt_warnings_only.snap
---
source: crates/diffguard-app/tests/snapshot_tests.rs
expression: json
---
{
  "schema": "diffguard.check.v1",
  "tool": {
    "name": "diffguard",
    "version": "0.1.0"
  },
  "diff": {
    "base": "feature/branch",
    "head": "HEAD",
    "context_lines": 0,
    "scope": "changed",
    "files_scanned": 3,
    "lines_scanned": 45
  },
  "findings": [
    {
      "rule_id": "rust.no_dbg",
      "severity": "warn",
      "message": "Remove dbg! macro before merging",
      "path": "src/main.rs",
      "line": 15,
      "column": 5,
      "match_text": "dbg!",
      "snippet": "    dbg!(config);"
    },
    {
      "rule_id": "js.no_console",
      "severity": "warn",
      "message": "Remove console.log before merging",
      "path": "src/utils.ts",
      "line": 42,
      "column": 3,
      "match_text": "console.log",
      "snippet": "  console.log(\"debug\");"
    }
  ],
  "verdict": {
    "status": "warn",
    "counts": {
      "info": 0,
      "warn": 2,
      "error": 0
    },
    "reasons": [
      "2 warning(s)"
    ]
  }
}
